Getting it there

--- a/public/inventory.html
+++ b/public/inventory.html
@@ -69,10 +69,10 @@
 						<th>Location <span class="glyphicon glyphicon-sort" aria-hidden="true"></span></th>
 						<th>Description <span class="glyphicon glyphicon-sort" aria-hidden="true"></span></th>
 						<th>ID # </th>
-						<th>Link </th>
+						<!-- <th>Link </th> -->
 						<th>Posted<br>From </th>
 						<th>Interest<br>Level </th>
-						<th>Notes </th>
+						<!-- <th>Notes </th> -->
 						<th>Response </th>
 						<th>Rejection </th>
 						<th>Update</th>
