--- a/public/edit.html
+++ b/public/edit.html
@@ -44,18 +44,18 @@
 		</nav>
 
 		<div class="addWrapper">
-			<!-- FORM TO ADD AN ITEM -->
-			<div class="container" id="newItemForm">
-				<h2 id="addHeader">Edit Item</h2>	
+			<!-- FORM TO ADD A JOB -->
+			<div class="container" id="newJobForm">
+				<h2 id="addHeader">Edit Job</h2>	
 				<div class="row">
 					<div class="col-sm-10">
 						<form class="form-horizontal">
 
-							<!--item name input-->
+							<!--job name input-->
 							<div class="form-group">
-								<label for="input_item_name" class="col-sm-3 control-label">Item Name</label>
+								<label for="input_job_name" class="col-sm-3 control-label">Job Name</label>
 								<div class="col-sm-9">
-									<input type="text" class="form-control" id="item_name" name="item_name" placeholder="Macbook Pro">
+									<input type="text" class="form-control" id="job_name" name="job_name" placeholder="Macbook Pro">
 								</div>
 							</div>
 
@@ -145,7 +145,7 @@
 							<!--submit button-->
 							<div class="form-group">
 								<div class="col-sm-offset-3 col-sm-9">
-									<button type="submit" class="btn btn-warning" id="editedItem">Save Changes</button>
+									<button type="submit" class="btn btn-warning" id="editedJob">Save Changes</button>
 								</div>
 							</div>
 
@@ -158,7 +158,7 @@
 		<!-- STICKY FOOTER -->
 		<footer class="footer">
 			<div class="container">
-				<p><a href="https://github.com/MASTIN/Virtual-Locker" target="_blank" >
+				<p><a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
 				<i class="fa fa-github"></i></a>
 				</p>
 			</div>    
