Getting it there

--- a/public/add.html
+++ b/public/add.html
@@ -10,7 +10,7 @@
 	<!-- CUSTOM STYLESHEET -->
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<!-- Favicon link -->
-	<link rel="icon" href="assets/images/safelogo.png" type="image/png" sizes="16x16">
+	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
 	<script src="https://use.fontawesome.com/feca357678.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Poppins" rel="stylesheet">
@@ -26,10 +26,10 @@
 		<!-- FIXED NAVBAR -->
 		<nav class="fixed-nav-bar">
 		  	<!-- Logo / link to main menu -->
-		  	<a href="/menu">Job Tracker<img id="navbarlogo" src="./assets/images/safelogo.png"></a>
+		  	<a href="/menu">Job Tracker<img id="navbarlogo" src="./assets/images/jobtracker2.png"></a>
 			<!-- dropdown menu -->
 			<div class="dropdown" id="menudropdown">
-			  	<button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+			  	<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
 			  		Menu<span class="caret"></span>
 			  	</button>
 				<ul class="dropdown-menu">
@@ -41,7 +41,7 @@
 		</nav>
 
 		<!-- BACKGROUND IMAGE -->
-		<img class="bgimage" src="./assets/images/grey.jpg">
+		<img class="bgimage" src="./assets/images/green.jpeg">
 
 		<div class="addWrapper">
 			<!-- FORM TO ADD AN ITEM -->
@@ -179,7 +179,7 @@
 							<!--submit button-->
 							<div class="form-group">
 								<div class="col-sm-offset-3 col-sm-9">
-									<button type="submit" class="btn btn-warning" id="newJob">Submit</button>
+									<button type="submit" class="btn btn-success" id="newJob">Submit</button>
 								</div>
 							</div>
 
