--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<!-- GOOGLE FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 	<!-- Favicon link -->
-	<link rel="icon" href="assets/images/safelogo.png" type="image/png" sizes="16x16">
+	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME -->
 	<script src="https://use.fontawesome.com/feca357678.js"></script>
 	<!-- Link for shine.js script -->
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<!-- BACKGROUND IMAGE -->
-	<img class="bgimage" src="./assets/images/grey.jpg">
+	<img class="bgimage" src="./assets/images/green.jpeg">
 
 	<div class="container">
 		<div class="centerContentParent">
@@ -29,15 +29,15 @@
 				<!-- HEADER -->
 				<h1>
 					<span id="landingPageHeader" class="shine large light shine-text-color">Job Tracker</span>
-					<span id="logoshadow">
-						<img id="headerlogo" src="./assets/images/safelogo.png">
+					<span id="logoshado">
+						<img id="headerlogo" src="./assets/images/jobtracker2.png">
 				</h1></span>
 				<!-- SUBTITLE / SLOGAN -->
 				<h4 id="slogan">Keep track of your valuables</h4>
 				<!-- LOGIN BUTTONS -->
 				<div id="loginButtons">
-					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-warning" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user"></i></button>
-					<button type="button" class="login btn col-sm-5 btn-warning" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fa fa-user"></i></button>
+					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user"></i></button>
+					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fa fa-user"></i></button>
 				</div>
 			</div>
 		</div>
@@ -77,7 +77,7 @@
     
 		    <div class="modal-footer">
 		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="submit" id="signinbutton" class="btn btn-warning">Submit</button>
+		        <button type="submit" id="signinbutton" class="btn btn-success">Submit</button>
 		    	</form>
 		    </div>
 		</div>
@@ -123,7 +123,7 @@
 
     	<div class="modal-footer">
     		<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        	<button type="submit" id="signupbutton" value="Sign Up" class="btn btn-warning">Submit</button>
+        	<button type="submit" id="signupbutton" value="Sign Up" class="btn btn-success">Submit</button>
         	</form>
       	</div>
     </div>
