--- a/public/menu.html
+++ b/public/menu.html
@@ -11,7 +11,7 @@
 	<!-- Link for shine.js script -->
 	<script src="js/shine.min.js"></script>
 	<!-- Favicon link -->
-	<link rel="icon" href="assets/images/safelogo.png" type="image/png" sizes="16x16">
+	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
 	<script src="https://use.fontawesome.com/feca357678.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
@@ -22,7 +22,7 @@
 </head>
 <body>	
 	<!-- BACKGROUND IMAGE -->
-	<img class="bgimage" src="./assets/images/grey.jpg">
+	<img class="bgimage" src="./assets/images/green.jpeg">
 	
 	<div class="container">
 
@@ -39,16 +39,15 @@
 				<!-- HEADER -->
 				<h1>
 					<span id="landingPageHeader" class="shine large light shine-text-color">
-						Job tracker
+						JOB TRACKER
 					</span>
-
-					<span id="logoshadow">
-						<img id="headerlogo" src="./assets/images/safelogo.png">
+					<span id="logoshadow"></span>
+						<img id="headerlogo" src="./assets/images/jobtracker2.png">
 					</span>
 				</h1>
 				<!-- ACTION BUTTONS -->
-				<button id="invButton" type="button" class="btn btn-warning btn-lg btn-block">View Applications</button>
-				<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block">Add New Job</button>
+				<button id="invButton" type="button" class="btn btn-success btn-lg btn-block">View Applications</button>
+				<button id="addButton" type="button" class="btn btn-success btn-lg btn-block">Add New Job</button>
 			</div>
 		</div>
 	</div>
