--- a/public/inventory.html
+++ b/public/inventory.html
@@ -13,7 +13,7 @@
 	<!-- CUSTOM STYLESHEET -->
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<!-- Favicon link -->
-	<link rel="icon" href="assets/images/safelogo.png" type="image/png" sizes="16x16">
+	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
@@ -36,10 +36,10 @@
 		<!-- FIXED NAVBAR -->
 		<nav class="fixed-nav-bar">
 		  	<!-- Logo / link to main menu -->
-		  	<a href="/menu">Job Tracker<img id="navbarlogo" src="./assets/images/safelogo.png"></a>
+		  	<a href="/menu">Job Tracker<img id="navbarlogo" src="./assets/images/jobtracker2.png"></a>
 			<!-- dropdown menu -->
 			<div class="dropdown" id="menudropdown">
-			  	<button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+			  	<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
 			  		Menu<span class="caret"></span>
 			  	</button>
 				<ul class="dropdown-menu">
@@ -51,7 +51,7 @@
 		</nav>
 
 		<!-- BACKGROUND IMAGE -->
-		<img class="bgimage" src="./assets/images/grey.jpg">
+		<img class="bgimage" src="./assets/images/green.jpeg">
 
 		<div class="container">
 			<!-- DATABLE -->
@@ -63,15 +63,15 @@
 						<th></th>
 
 
-						<th>Date<br>Applied <span class="glyphicon glyphicon-sort" aria-hidden="true"></span></th>
-						<th>Position <span class="glyphicon glyphicon-sort" aria-hidden="true"></span></th>
-						<th>Company <span class="glyphicon glyphicon-sort" aria-hidden="true"></span></th>
-						<th>Location <span class="glyphicon glyphicon-sort" aria-hidden="true"></span></th>
-						<th>Description <span class="glyphicon glyphicon-sort" aria-hidden="true"></span></th>
-						<th>ID # </th>
+						<th>Date<br>Applied <span class="fa fa-sort" aria-hidden="true"></span></th>
+						<th>Position <span class="fa fa-sort" aria-hidden="true"></span></th>
+						<th>Company <span class="fa fa-sort" aria-hidden="true"></span></th>
+						<th>Location <span class="fa fa-sort" aria-hidden="true"></span></th>
+						<th>Description <span class="fa fa-sort" aria-hidden="true"></span></th>
+						<th>ID # <span class="fa fa-sort" aria-hidden="true"></span></th>
 						<!-- <th>Link </th> -->
-						<th>Posted<br>From </th>
-						<th>Interest<br>Level </th>
+						<th>Posted<br>From <span class="fa fa-sort" aria-hidden="true"></span></th>
+						<th>Interest<br>Level <span class="fa fa-sort" aria-hidden="true"></span></th>
 						<!-- <th>Notes </th> -->
 						<th>Response </th>
 						<th>Rejection </th>
