Getting it there

--- a/public/inventory.html
+++ b/public/inventory.html
@@ -56,7 +56,7 @@
 		<div class="container">
 			<!-- DATABLE -->
 			<div id="table-container">
-				<h1 class="headerInventory"><span class="showNameInventory"></span> Inventory</h1>
+				<h1 class="headerInventory"><span class="showNameInventory"></span> Job Applications</h1>
 				<table id="inventory" class="table table-hover table-responsive" cellspacing="0" width="100%">
 					<thead>
 					<tr>
@@ -92,7 +92,7 @@
 			<div class="container">
 				<p>
 					<a href="https://github.com/stuartschafer/Job-Tracker-2.0">
-					<i class="fa fa-github"></i></a>
+					<i class="fab fa-github-square"></i></a>
 				</p>
 			</div>    
 		</footer>
