Getting it there

--- a/public/add.html
+++ b/public/add.html
@@ -13,7 +13,7 @@
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
 	<script src="https://use.fontawesome.com/feca357678.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Poppins" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Acme|Kavivanar" rel="stylesheet">
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
@@ -46,7 +46,7 @@
 		<div class="addWrapper">
 			<!-- FORM TO ADD AN ITEM -->
 			<div class="container" id="newJobForm">
-				<h2 id="addHeader">Add a New Job</h2>	
+				<h2 id="addHeader">Add a New Job Application</h2>	
 				<div class="row">
 					<div class="col-sm-10">
 						<form class="form-horizontal">
@@ -179,7 +179,7 @@
 							<!--submit button-->
 							<div class="form-group">
 								<div class="col-sm-offset-3 col-sm-9">
-									<button type="submit" class="btn btn-success" id="newJob">Submit</button>
+									<button type="submit" class="btn btn-success" id="newJob">Submit</i></button>
 								</div>
 							</div>
 
