--- a/public/edit.html
+++ b/public/edit.html
@@ -13,7 +13,7 @@
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
 	<script src="https://use.fontawesome.com/feca357678.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Acme|Kavivanar" rel="stylesheet">
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
@@ -43,10 +43,13 @@
 			</div>
 		</nav>
 
+		<!-- BACKGROUND IMAGE -->
+		<img class="bgimage" src="./assets/images/green.jpeg">
+
 		<div class="addWrapper">
 			<!-- FORM TO ADD A JOB -->
 			<div class="container" id="newJobForm">
-				<h2 id="addHeader">Edit Job</h2>	
+				<h2 id="addHeader">Edit Job Application</h2>	
 				<div class="row">
 					<div class="col-sm-10">
 						<form class="form-horizontal">
@@ -122,7 +125,7 @@
 								<div class="form-check form-check-inline" id="interestLevel">
 										&nbsp
 									<label class="form-check-label">
-										<input class="form-check-input" type="radio" name="inlineRadioOptions2" id="interest_level_1" value="1"> 1
+										<input class="form-check-input" type="radio" name="inlineRadioOptions2" id="interest_level_1"  e="1"> 1
 									</label>
 									&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 									<label class="form-check-label">
