--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- GOOGLE FONTS -->
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Acme|Kavivanar" rel="stylesheet">
 	<!-- Favicon link -->
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME -->
@@ -28,16 +28,16 @@
 			<div class="centerContentChild">
 				<!-- HEADER -->
 				<h1>
-					<span id="landingPageHeader" class="shine large light shine-text-color">Job Tracker</span>
+					<span id="landingPageHeader" class="shine large light shine-text-color">JOB TRACKER</span>
 					<span id="logoshado">
 						<img id="headerlogo" src="./assets/images/jobtracker2.png">
 				</h1></span>
 				<!-- SUBTITLE / SLOGAN -->
-				<h4 id="slogan">Keep track of your valuables</h4>
+				<h4 id="slogan">Your next job starts here</h4>
 				<!-- LOGIN BUTTONS -->
 				<div id="loginButtons">
-					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user"></i></button>
-					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fa fa-user"></i></button>
+					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
+					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fa fa-sign-in"></i></button>
 				</div>
 			</div>
 		</div>
