--- a/public/menu.html
+++ b/public/menu.html
@@ -14,7 +14,7 @@
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
 	<script src="https://use.fontawesome.com/feca357678.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Acme|Kavivanar" rel="stylesheet">
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
@@ -42,12 +42,14 @@
 						JOB TRACKER
 					</span>
 					<span id="logoshadow"></span>
-						<img id="headerlogo" src="./assets/images/jobtracker2.png">
+						<img id="headerlogo" class="headLogo" src="./assets/images/jobtracker2.png">
 					</span>
 				</h1>
+				<div id="buttons">
 				<!-- ACTION BUTTONS -->
-				<button id="invButton" type="button" class="btn btn-success btn-lg btn-block">View Applications</button>
-				<button id="addButton" type="button" class="btn btn-success btn-lg btn-block">Add New Job</button>
+				<button id="invButton" type="button" class="btn btn-success btn-lg btn-block">View Applications <i class="fa fa-wpforms"></i></button>
+				<button id="addButton" type="button" class="btn btn-success btn-lg btn-block">Add New Job <i class="fa fa-plus-square"></i></button>
+				</div>
 			</div>
 		</div>
 	</div>
