Getting it there

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 						<img id="headerlogo" src="./assets/images/jobtracker2.png">
 				</h1></span>
 				<!-- SUBTITLE / SLOGAN -->
-				<h4 id="slogan">Your next job starts here</h4>
+				<h4 id="slogan">Never fear, your career is all right here.</h4>
 				<!-- LOGIN BUTTONS -->
 				<div id="loginButtons">
 					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
