Getting it there

--- a/public/inventory.html
+++ b/public/inventory.html
@@ -73,7 +73,7 @@
 						<th>Posted<br>From <span class="fa fa-sort" aria-hidden="true"></span></th>
 						<th>Interest<br>Level <span class="fa fa-sort" aria-hidden="true"></span></th>
 						<!-- <th>Notes </th> -->
-						<th>Employer<br>Response </th>
+						<th>Employer's<br>Response </th>
 						
 						<th>Update</th>
 						<th>Delete</th>
