--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<!-- Favicon link -->
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME -->
-	<script src="https://use.fontawesome.com/feca357678.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<!-- Link for shine.js script -->
 	<script src="js/shine.min.js"></script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
