--- a/public/inventory.html
+++ b/public/inventory.html
@@ -44,7 +44,8 @@
 			  	</button>
 				<ul class="dropdown-menu">
 				    <li><a href="/add">Add New Job</a></li>
-				    <li><a href="/inventory">View Applications</a></li>
+					<li><a onclick="viewActive()">View ACTIVE Applications</a></li>
+					<li><a onclick="viewInactive()">View INACTIVE Applications</a></li>
 				    <li><a href="/logout">Logout</a></li>
 			  	</ul>
 			</div>
@@ -56,7 +57,7 @@
 		<div class="container">
 			<!-- DATABLE -->
 			<div id="table-container">
-				<h1 class="headerInventory"><span class="showNameInventory"></span> Job Applications</h1>
+				<h1 class="headerInventory"><span class="showNameInventory"></span> <u><span id="whichView"></span></u> Job Applications</h1>
 				<table id="inventory" class="table table-hover table-responsive" cellspacing="0" width="100%">
 					<thead>
 					<tr>
@@ -134,13 +135,13 @@
 
 					<div class="form-check">
 						<label class="form-check-label active_inactive">
-							<input class="form-check-input" type="radio" name="statusRadio" id="applicationStatus" value="ACTIVE">
+							<input class="form-check-input" type="radio" name="statusRadio" id="applicationStatus" value="Active">
 							Mark application as <span id="statusActiveLabel">ACTIVE</span>
 						</label>
 						</div>
 						<div class="form-check">
 						<label class="form-check-label">
-							<input class="form-check-input" type="radio" name="statusRadio" id="applicationStatus" value="INACTIVE">
+							<input class="form-check-input" type="radio" name="statusRadio" id="applicationStatus" value="Inactive">
 							Mark application as <span id="statusInactiveLabel">INACTIVE</span>
 						</label>
 					</div>
