--- a/public/menu.html
+++ b/public/menu.html
@@ -13,7 +13,7 @@
 	<!-- Favicon link -->
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
-	<script src="https://use.fontawesome.com/feca357678.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Acme|Kavivanar" rel="stylesheet">
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -46,9 +46,11 @@
 					</span>
 				</h1>
 				<div id="buttons">
-				<!-- ACTION BUTTONS -->
-				<button id="invButton" type="button" class="btn btn-success btn-lg btn-block">View Applications <i class="fa fa-wpforms"></i></button>
-				<button id="addButton" type="button" class="btn btn-success btn-lg btn-block">Add New Job <i class="fa fa-plus-square"></i></button>
+					<!-- ACTION BUTTONS -->
+					<button id="invButton" type="button" class="btn btn-success btn-lg btn-block">View ACTIVE Applications <i class="fa fa-thumbs-up"></i></button>
+					<button id="addButton" type="button" class="btn btn-success btn-lg btn-block">Add New Job <i class="fas fa-clipboard-check"></i></button>
+					<br>
+					<button id="inactButton" type="button" class="btn btn-secondary btn-lg btn-block">View Inactive Applications <i class="fas fa-skull"></i></button>
 				</div>
 			</div>
 		</div>
