Adding more finishing touches :sparkles:

--- a/public/edit.html
+++ b/public/edit.html
@@ -126,6 +126,10 @@
 								<div class="form-check form-check-inline" id="interestLevel">
 										&nbsp
 									<label class="form-check-label">
+										<input class="form-check-input" type="radio" name="inlineRadioOptions2" id="interest_level_0" value="0"> 0
+									</label>
+									&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<label class="form-check-label">
 										<input class="form-check-input" type="radio" name="inlineRadioOptions2" id="interest_level_1" value="1"> 1
 									</label>
 									&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
@@ -220,8 +224,9 @@
 		<!-- STICKY FOOTER -->
 		<footer class="footer">
 			<div class="container">
-				<p><a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
-				<i class="fa fa-github"></i></a>
+				<p>
+					<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
+					<i class="fab fa-github-square"></i></a>
 				</p>
 			</div>    
 		</footer>
