--- a/public/inventory.html
+++ b/public/inventory.html
@@ -68,14 +68,11 @@
 						<th>Location <span class="fa fa-sort" aria-hidden="true"></span></th>
 						<th>Description <span class="fa fa-sort" aria-hidden="true"></span></th>
 						<th>ID # <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<!-- <th>Link </th> -->
 						<th>Posted<br>From <span class="fa fa-sort" aria-hidden="true"></span></th>
 						<th>Interest<br>Level <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<!-- <th>Notes </th> -->
 						<th>Employer's<br>Response </th>
-						
 						<th>Update</th>
-						<th>Delete</th>
+						<!-- <th>Delete</th> -->
 					</tr>
 					</thead>
 
@@ -166,10 +163,10 @@
 		</div>
 
 		<!-- STICKY FOOTER -->
-		<footer>
+		<footer class="footer">
 			<div class="container">
 				<p>
-					<a href="https://github.com/stuartschafer/Job-Tracker-2.0">
+					<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
 					<i class="fab fa-github-square"></i></a>
 				</p>
 			</div>    
