Adding more finishing touches :sparkles:

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -46,6 +46,7 @@
 				    <li><a href="/add">Add New Job</a></li>
 					<li><a onclick="viewActive()">View ACTIVE Applications</a></li>
 					<li><a onclick="viewInactive()">View INACTIVE Applications</a></li>
+					<li><a href="/search">Search Jobs (coming soon!)</a></li>
 				    <li><a href="/logout">Logout</a></li>
 			  	</ul>
 			</div>
